--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,13 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fluttertoast: ^8.2.12
-  http: ^1.3.0
-  google_fonts: ^5.1.0
-  flutter_animate: ^4.1.1+1
+  fluttertoast: ^8.2.4
+  http: ^1.1.0
+  google_fonts: ^6.1.0
+  flutter_animate: ^4.5.0
   shared_preferences: ^2.2.2
   intl: ^0.18.1
-  url_launcher: ^6.3.1
+  url_launcher: ^6.2.2
+  google_generative_ai:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
